Project

General

Profile

Actions

Bug #7847

closed

gem release of io-console is broken on Windows

Bug #7847: gem release of io-console is broken on Windows

Added by luislavena (Luis Lavena) over 13 years ago. Updated about 13 years ago.

Status:
Closed
Target version:
ruby -v:
1.9.x and 2.0.x
Backport:
[ruby-core:52220]

Description

Nobu-san,

Lot of folks are having issues with latest io-console gem that got released:

https://github.com/nobu/io-console/issues/6

https://groups.google.com/d/topic/rubyinstaller/9qbj5HKN7w4/discussion

The code in the GitHub repository is 3 years old, so I can't provide a pull request that patches the behavior.

I'm not sure where the code that is part of the gem is coming from, since io-console compiles without issues as part of Ruby extensions.

I'm opening this here due the lack of feedback on GitHub issues and the raise of more reports about this issue.

Thank you.


Related issues 1 (0 open1 closed)

Blocked by Backport200 - Backport #7861: New macro for the new feature of rb_scan_args()Closednobu (Nobuyoshi Nakada)Actions

Updated by nobu (Nobuyoshi Nakada) over 13 years ago Actions #1

  • Status changed from Assigned to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r39268.
Luis, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


io/console: compatibility with 1.9

  • ext/io/console/console.c (rawmode_opt, console_dev): compatibility
    with ruby 1.9. [ruby-core:52220] [Bug #7847]

Updated by luislavena (Luis Lavena) over 13 years ago Actions #2 [ruby-core:52576]

  • Status changed from Closed to Open

Thank you Nobu.

Can you release io-console 0.4.2 to rubygems.org?

That will fix the situation for users running 1.9.3.

Thank you.

Updated by naruse (Yui NARUSE) over 13 years ago Actions #3

  • Target version changed from 1.9.3 to 2.6

Updated by naruse (Yui NARUSE) about 13 years ago Actions #4 [ruby-core:56426]

  • Status changed from Open to Closed

http://rubygems.org/gems/io-console/versions/0.4.2 is released at February 16, 2013.

Actions

Also available in: PDF Atom